# dejavu2-cli

./: .bash_completion  .coverage  .gitignore  AUDIT-EVALUATE.md  AUDIT-PYTHON.md  Agents.json  CLAUDE.md  Models.json  Models.py  PURPOSE-FUNCTIONALITY-USAGE.md  README.md  config.py  context.py  conversations.py  defaults.yaml  dejavu2  dejavu2-cli  dejavu2-cli-completion-advanced.bash  dejavu2-cli-completion.bash  dejavu2-cli.py  dejavu2_cli.py  display.py  dv  dv2  dv2c  errors.py  llm-Templates.yaml  llm_clients.py  main.py  models.py  push-to-okusi  push-to-okusi3.sh  pyproject.toml  requirements.txt  run_tests.sh  security.py  templates.py  utils.py  version.py
Agents/: .bash_completion  Agents.json  CLAUDE.md  LATEST-PROMPT-ADVICE.md  README.md  dv2-agents  dv2-agents-aliases  dv2-agents.py  requirements.txt
Models/: .bash_completion  CLAUDE.md  Models.20260125-104544.backup.json  Models.json  Models.json.backup  Models.py  README.md  check_models_json.py  current_families.txt  dv2-list-models  dv2-list-models.py  dv2-models-list  dv2-models-update  get-models-info.md  gpt-5-models.md  models.dev.json  test.php  test.py  test.sh  tt.json  tt.txt  update-models.dev.sh  update_anthropic_models.py  update_openai_models  update_openai_models.py
Models/.cache/openai/: context_windows.json  max_output_tokens.json  models_api.json  pricing.json
Models/utils/dv2-models-list/: .bash_completion  AUDIT-EVALUATE.md  CLAUDE.md  PURPOSE-FUNCTIONALITY-USAGE.md  README.md  __init__.py  dv2-models-list  dv2-models-list.py  model_stats.py  presets.py  query_parser.py
Models/utils/dv2-update-models/: .bash_completion  .cache  CLAUDE.md  Models.json  README.md  (+2 more)
docs/: AUDIT-EVALUATE.md  CODE-REVIEW.md  PURPOSE-FUNCTIONALITY-USAGE.md
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_security.py
tests/functional/: test_cli.py
tests/integration/: test_all_llms.py  test_kb.py  test_models.py
tests/unit/: test_config.py  test_context.py  test_conversations.py  test_display.py  test_errors.py  test_llm_clients.py  test_main.py  test_models.py  test_models_unit.py  test_templates.py  test_utils.py  test_version.py  test_version_updater.py
utils/bash_completions/: dejavu2-cli-completion-advanced.bash  install-bash-completion.sh
(+35 files in other folders)
